Fix bottom spacing on ribbon main texts

--- a/js/src/css/ribbon.scss
+++ b/js/src/css/ribbon.scss
@@ -32,7 +32,7 @@
   position: relative;
   background: $bg-default;
   text-align: center;
-  padding: 0.4em 0.4em; /* Adjust to suit */
+  padding: 0.4em 0.4em 0.3em; /* Adjust to suit */
   margin: -1.5em auto 0.4em;
   /* Based on 24px vertical rhythm. 48px bottom margin - normally 24 but the
   ribbon 'graphics' take up 24px themselves so we double it. */
